// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAlertPanelsByNode should not show any alert if none are firing 1`] = `
Array [
  Object {
    "id": 0,
    "items": Array [],
    "title": "Alerts",
  },
]
`;

exports[`getAlertPanelsByNode should properly group for alerts in a single category 1`] = `
Array [
  Object {
    "id": 0,
    "items": Array [
      Object {
        "name": <EuiText>
          es_name_0
           (
          1
          )
        </EuiText>,
        "panel": 1,
      },
      Object {
        "name": <EuiText>
          es_name_1
           (
          1
          )
        </EuiText>,
        "panel": 2,
      },
    ],
    "title": "Alerts",
  },
  Object {
    "id": 1,
    "items": Array [
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_jvm_memory_usage_label
          </EuiText>
        </React.Fragment>,
        "panel": 3,
      },
    ],
    "title": "es_name_0",
  },
  Object {
    "id": 2,
    "items": Array [
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_jvm_memory_usage_label
          </EuiText>
        </React.Fragment>,
        "panel": 4,
      },
    ],
    "title": "es_name_1",
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_jvm_memory_usage",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_jvm_memory_usage_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_jvm_memory_usage_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es0",
            "nodeName": "es_name_0",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 3,
    "title": "monitoring_alert_jvm_memory_usage_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_jvm_memory_usage",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_jvm_memory_usage_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_jvm_memory_usage_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es1",
            "nodeName": "es_name_1",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 4,
    "title": "monitoring_alert_jvm_memory_usage_label",
    "width": 400,
  },
]
`;

exports[`getAlertPanelsByNode should properly group for alerts in each category 1`] = `
Array [
  Object {
    "id": 0,
    "items": Array [
      Object {
        "name": <EuiText>
          es_name_0
           (
          3
          )
        </EuiText>,
        "panel": 1,
      },
      Object {
        "name": <EuiText>
          es_name_1
           (
          3
          )
        </EuiText>,
        "panel": 2,
      },
    ],
    "title": "Alerts",
  },
  Object {
    "id": 1,
    "items": Array [
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_nodes_changed_label
          </EuiText>
        </React.Fragment>,
        "panel": 3,
      },
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_disk_usage_label
          </EuiText>
        </React.Fragment>,
        "panel": 4,
      },
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_license_expiration_label
          </EuiText>
        </React.Fragment>,
        "panel": 5,
      },
    ],
    "title": "es_name_0",
  },
  Object {
    "id": 2,
    "items": Array [
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_nodes_changed_label
          </EuiText>
        </React.Fragment>,
        "panel": 6,
      },
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_license_expiration_label
          </EuiText>
        </React.Fragment>,
        "panel": 7,
      },
      Object {
        "name": <React.Fragment>
          <EuiToolTip
            content="triggered:0"
            delay="regular"
            disableScreenReaderOutput={false}
            display="inlineBlock"
            position="top"
          >
            <EuiText
              size="s"
            >
              triggered:0
            </EuiText>
          </EuiToolTip>
          <EuiText
            size="s"
          >
            monitoring_alert_nodes_changed_label_2
          </EuiText>
        </React.Fragment>,
        "panel": 8,
      },
    ],
    "title": "es_name_1",
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_nodes_changed",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_nodes_changed_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_nodes_changed_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es0",
            "nodeName": "es_name_0",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 3,
    "title": "monitoring_alert_nodes_changed_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_disk_usage",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_disk_usage_1",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_disk_usage_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es0",
            "nodeName": "es_name_0",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 4,
    "title": "monitoring_alert_disk_usage_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_license_expiration",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_license_expiration_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_license_expiration_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es0",
            "nodeName": "es_name_0",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 5,
    "title": "monitoring_alert_license_expiration_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_nodes_changed",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_nodes_changed_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_nodes_changed_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es1",
            "nodeName": "es_name_1",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 6,
    "title": "monitoring_alert_nodes_changed_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_license_expiration",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_license_expiration_2",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_license_expiration_label",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es1",
            "nodeName": "es_name_1",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 7,
    "title": "monitoring_alert_license_expiration_label",
    "width": 400,
  },
  Object {
    "content": <AlertPanel
      alert={
        Object {
          "actions": Array [],
          "alertTypeId": "monitoring_alert_nodes_changed",
          "apiKey": null,
          "apiKeyOwner": null,
          "consumer": "",
          "createdAt": 2020-12-08T00:00:00.000Z,
          "createdBy": null,
          "enabled": true,
          "executionStatus": Object {
            "lastExecutionDate": 2020-12-08T00:00:00.000Z,
            "status": "ok",
          },
          "id": "monitoring_alert_nodes_changed_3",
          "muteAll": false,
          "mutedInstanceIds": Array [],
          "name": "monitoring_alert_nodes_changed_label_2",
          "notifyWhen": null,
          "params": Object {},
          "revision": 0,
          "schedule": Object {
            "interval": "1m",
          },
          "tags": Array [],
          "throttle": null,
          "updatedAt": 2020-12-08T00:00:00.000Z,
          "updatedBy": null,
        }
      }
      alertState={
        Object {
          "firing": true,
          "meta": Object {},
          "state": Object {
            "cluster": Object {
              "clusterName": "one",
              "clusterUuid": "1",
            },
            "nodeId": "es1",
            "nodeName": "es_name_1",
            "ui": Object {
              "isFiring": false,
              "lastCheckedMS": 0,
              "message": Object {
                "text": "",
              },
              "resolvedMS": 0,
              "severity": "danger",
              "triggeredMS": 0,
            },
          },
        }
      }
    />,
    "id": 8,
    "title": "monitoring_alert_nodes_changed_label_2",
    "width": 400,
  },
]
`;
